# macula-tweann

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  rebar.config  update_test_setups.sh
design_docs/: ANALYSIS_SUMMARY.txt  CODE_QUALITY_REVIEW_v0.10.0.md  DXNN2_CODEBASE_ANALYSIS.md  INDEX.md  README.md  addendum-military-civil-resilience.md  investigation-khepri-vs-mnesia.md  vision-distributed-mega-brain.md
doc/: .build  404.html  api-reference.html  edoc-info  functions.html  index.html  macula_tweann.epub  modules-frame.html  overview-summary.html  readme.html  search.html  signal_aggregator.html
docs/: PUBLISHING_PLAN.md
guides/: CUSTOM_MORPHOLOGIES.md  addendum-anti-drone-defense.md  addendum-military-civil-resilience.md  architecture.md  assets  c4-architecture.md  diagram-index.md  enterprise-nifs.md  installation.md  ltc-evolution.md  ltc-neurons.md  ltc-usage-guide.md  neuron-types.md  overview.md  quickstart.md  tweann-basics.md  vision-distributed-mega-brain.md
include/: records.hrl  types.hrl
native/: Cargo.toml
native/src/: lib.rs
plans/: PLAN_BRAIN_PUBSUB_REVIEW.md  PLAN_LEARNING_ARCHITECTURE.md  PLAN_LTC_INTEGRATION.md  PLAN_TOPOLOGY_EVOLUTION.md  PLAN_TWEANN_MEMORY_AND_PROCESSING_OPTIMIZATION.md
scripts/: check-links.sh  publish-to-hex.sh  publish-v0.15.3.sh
src/: actuator.erl  brain.erl  brain_learner.erl  brain_pubsub.erl  brain_sup.erl  brain_system.erl  constructor.erl  cortex.erl  crossover.erl  exoself.erl  fitness_postprocessor.erl  functions.erl  genome_crossover.erl  genome_mutator.erl  genotype.erl  (+33 more)
(+55 files in other folders)
