[package]
name = "tweann_nif"
version = "0.1.0"
authors = ["Macula.io"]
edition = "2021"
description = "High-performance NIF for TWEANN network evaluation"

[lib]
name = "tweann_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.34"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
